updated pyspark code.  Initial commit of cotraveller code

--- a/pyspark/1-test.ipynb
+++ b/pyspark/1-test.ipynb
@@ -9,9 +9,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "#import glob\n",
-    "import datetime\n",
-    "#from datetime import datetime\n"
+    "import datetime\n"
    ]
   },
   {
@@ -215,37 +213,6 @@
    "source": [
     "minDTO = datetime.datetime.strptime(globalMinDT, datetimeFormat)\n",
     "maxDTO = datetime.datetime.strptime(globalMaxDT, datetimeFormat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0552c28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def createPathsold(aisShipData, globalMinDT, globalMaxDT):\n",
-    "   \n",
-    "    \n",
-    "#    dtX = globalMinDT\n",
-    "#    while dtX<minDT:\n",
-    "#        pathPoint={\"dt\": dtX, \"lat\": None, \"lon\": None}\n",
-    "#        pathpoints[dtX] = pathPoint\n",
-    "#        dtX = dtX + datetime.timedelta(0, timeBucketSeconds)\n",
-    "#    while dtX<maxDT:\n",
-    "#        (nearestPoints_prev, nearestPoints_next) = findClosestNeighborsToDateTime(dtX, aisShipData)\n",
-    "#        (interp_point_lat, interp_point_long) = interpolatePointFromNeighbors(dtX, nearestPoints_prev, nearestPoints_next)\n",
-    "#        deres_lat = deResoluteFloat(interp_point_lat, deResoluteFactor)\n",
-    "#        deres_lon = deResoluteFloat(interp_point_long, deResoluteFactor)\n",
-    "#        pathPoint={\"dt\": dtX, \"lat\": deres_lat, \"lon\": deres_lon}\n",
-    "#        pathpoints[dtX] = pathPoint\n",
-    "#        dtX = dtX + datetime.timedelta(0,timeBucketSeconds)\n",
-    "#    while dtX<globalMaxDT:\n",
-    "#        pathPoint={\"dt\": dtX, \"lat\": None, \"lon\": None}\n",
-    "#        pathpoints[dtX] = pathPoint\n",
-    "#        dtX = dtX + datetime.timedelta(0, timeBucketSeconds)\n",
-    "\n",
-    "    return pathpoints"
    ]
   },
   {
